--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: '{build}'
 skip_tags: true
-image: Visual Sutdio 2017
+image: Visual Studio 2017
 configuration: Release
 test: off
 build_script:
