--- a/src/Vertical.CommandLine/Vertical.CommandLine.csproj
+++ b/src/Vertical.CommandLine/Vertical.CommandLine.csproj
@@ -1,22 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace />
+    <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <RootNamespace />    
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\assets\Vertical.CommandLine.snk</AssemblyOriginatorKeyFile>
-	  <PublicSign Condition="'$(OS)' != 'Windows_NT'">true</PublicSign>
+    <PublicSign Condition="'$(OS)' != 'Windows_NT'">true</PublicSign>
     <Description>Simple command line argument mapping</Description>
     <Authors>Vertical Software contributors</Authors>
-	  <VersionPrefix>1.0.2</VersionPrefix>
+    <VersionPrefix>1.1.0</VersionPrefix>
     <PackageId>vertical-commandline</PackageId>
-	  <PackageTags>commandline;utilities</PackageTags>
-	  <PackageProjectUrl>https://github.com/verticalsoftware/vertical-commandline</PackageProjectUrl>
-	  <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
-    <PackageIconUrl>https://github.com/verticalsoftware/vertical-commandline/raw/master/assets/package-logo.png</PackageIconUrl>
-	  <RepositoryType>git</RepositoryType>
-	  <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <PackageTags>commandline;utilities</PackageTags>
+    <PackageProjectUrl>https://github.com/verticalsoftware/vertical-commandline</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>package-logo.png</PackageIcon>
+    <RepositoryType>git</RepositoryType>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <Title>vertical-commandline</Title>
-    <Copyright>Copyright (C) 2018 Vertical Software</Copyright>    
+    <Copyright>Copyright (C) 2018 Vertical Software</Copyright>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolsPackageFormat>snupkg</SymbolsPackageFormat>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <None Include="../../assets/package-logo.png" Pack="true" Visible="false" PackagePath="" />
+  </ItemGroup>
 </Project>
