--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -23,7 +23,12 @@ jobs:
       - name: Build
         run: dotnet build -c Release --no-restore
       - name: Test
-        run: dotnet test --no-restore --verbosity normal
+        run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
+      - uses: codecov/codecov-action@v1
+        with:
+          files: test/TestResults
+          flags: unittests
+          name: vertical-commandline-codecov
       - name: Set build label
         run: echo "DEVLABEL=$(date +'%Y%m%d')" >> $GITHUB_ENV
       - name: Build pre-release packages
