--- a/src/Vertical.CommandLine.csproj
+++ b/src/Vertical.CommandLine.csproj
@@ -22,6 +22,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolsPackageFormat>snupkg</SymbolsPackageFormat>
     <IsPackable>true</IsPackable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   
   <ItemGroup>
