--- a/src/Vertical.CommandLine.csproj
+++ b/src/Vertical.CommandLine.csproj
@@ -8,7 +8,7 @@
     <PublicSign Condition="'$(OS)' != 'Windows_NT'">true</PublicSign>
     <Description>Simple command line argument mapping</Description>
     <Authors>Vertical Software contributors</Authors>
-    <VersionPrefix>2.0.0git chec</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
     <PackageId>vertical-commandline</PackageId>
     <PackageTags>commandline;utilities</PackageTags>
     <PackageProjectUrl>https://github.com/verticalsoftware/vertical-commandline</PackageProjectUrl>
