--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -24,7 +24,8 @@ jobs:
         run: dotnet build -c Release --no-restore
       - name: Test
         run: dotnet test --no-restore --collect:"XPlat Code Coverage"
-      - uses: codecov/codecov-action@v1
+      - name: Publish code coverage        
+        uses: codecov/codecov-action@v1
         with:
           files: "**/coverage.cobertura.xml"
           flags: unittests
